--- a/Wk2/testharness.html
+++ b/Wk2/testharness.html
@@ -1,53 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="https://unpkg.com/mocha/mocha.css" />
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-        <script src="jquery-3.5.1.min.js"></script>
-        <script src="javascript.js"></script> 
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://unpkg.com/mocha/mocha.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <script src="javascript.js"></script>
 
-        <title>Test Harness</title>
+    <title>Test Harness</title>
 
-        <style>
-            /* CSS goes here */
+    <style>
+        /* CSS goes here */
 
-            section {
-                background-color: blue;
-                font-size: 150%;
-            }
-        </style>
-
-
-<script>
+        section {
+            background-color: blue;
+            font-size: 150%;
+        }
+    </style>
 
 
-
-</script>
-    </head>
-
-    <body>
-        <h1>Test Harness</h1>
-
-        <section class="Hello World">
-            <h1> Hello World </h1>
-
-            <input type="text" id="name">Please enter your name</p>
-            <button id="sayHello">Say Hello!</button>
-            <p id="sayHello_result"></p>
-        </section>
-
-        <section>
-            <h1> Validation </h1>
+    <script>
 
 
-        </section>
-        
-        <section>
-            <h1> Unique Numbers </h1>
+
+    </script>
+</head>
+
+<body>
+<h1>Test Harness</h1>
+
+<section class="Hello World">
+    <h1> Hello World </h1>
+
+    <input type="text" id="name">Please enter your name</p>
+    <button id="sayHello">Say Hello!</button>
+    <p id="sayHello_result"></p>
+</section>
+
+<section>
+    <h1> Validation </h1>
+
+        <label for="theNumber"?>Validate:</label><br>
+        <input type="number" id="theNumber" name="theNumber"><br>
+        <div id="numberMessage">
+            <p id="numberResult"></p>
+        </div>
+
+        <button id="numberButton">Check result</button>
+
+</section>
+
+<section>
+    <h1> Unique Numbers </h1>
 
 
-        </section>
-    </body>
+</section>
+</body>
 </html>
