made changes to question 23
written method getSessionId inside Session class

put sessions array inside constructor

--- a/CMP3006Exercises/COMP3006_SetEx_2021-22/COMP3006_SetEx_2021-22/COMP3006_SetEx_2021-22.html
+++ b/CMP3006Exercises/COMP3006_SetEx_2021-22/COMP3006_SetEx_2021-22/COMP3006_SetEx_2021-22.html
@@ -49,15 +49,20 @@
                     this.title = title;
                     this.sessionTime = sessionTime;
                     this.staff = staff;
-
-                    function getSessionId() {
-
-                    }
                 }
+
+                getSessionId(){
+                    return this.sessionTime
+                }
+
             }
             
             class Timetable {
-                sessions = [];
+                constructor() {
+                    sessions = [];
+                    sessions.push()
+                }
+
             }
 
 
