--- a/CMP3006Exercises/COMP3006_SetEx_2021-22/COMP3006_SetEx_2021-22/COMP3006_SetEx_2021-22.html
+++ b/CMP3006Exercises/COMP3006_SetEx_2021-22/COMP3006_SetEx_2021-22/COMP3006_SetEx_2021-22.html
@@ -83,6 +83,24 @@
                     parent.classList.add("active");
                 }
 
+                clearSession(){
+                    // para 1
+                    let tue_9_title = document.createElement("p")
+                    tue_9_title.innerText = this.title;
+                    tue_9_title.id = `${this.getSessionId()}_title`;
+
+                    // para2
+                    let tue_9_staff = document.createElement("p")
+                    tue_9_staff.innerText = this.staff;
+                    tue_9_staff.id = `${this.getSessionId()}_staff`;
+
+                    let parent = document.getElementById(this.getSessionId());
+
+                    parent.appendChild(tue_9_staff);
+                    parent.appendChild(tue_9_title);
+                    parent.classList.remove("active");
+                }
+
             }
             
             class Timetable {
