--- a/CMP3006Exercises/COMP3006_SetEx_2021-22/COMP3006_SetEx_2021-22/COMP3006_SetEx_2021-22.html
+++ b/CMP3006Exercises/COMP3006_SetEx_2021-22/COMP3006_SetEx_2021-22/COMP3006_SetEx_2021-22.html
@@ -115,6 +115,12 @@
                     }
                 }
 
+                clearTimetable() {
+                    for (let i = 0; i < this.sessions.length; i++) {
+                        this.sessions[i].clearSession(); // clears the session from the session class
+                    }
+                }
+
             }
 
 
