--- a/CMP3006Exercises/COMP3006_SetEx_2021-22/COMP3006_SetEx_2021-22/COMP3006_SetEx_2021-22.html
+++ b/CMP3006Exercises/COMP3006_SetEx_2021-22/COMP3006_SetEx_2021-22/COMP3006_SetEx_2021-22.html
@@ -123,6 +123,27 @@
 
             }
 
+            function buildTimetable(sampleTimetable) {
+                for (let i = 0; i < sampleTimetable.length; i++) {
+                    let newSession = new Session(this.title);
+                    this.sessions.push(newSession);
+                }
+
+                // let newSession, sampleTimetablecopy;
+                // sampleTimetablecopy = newSession;
+                //
+                // for (let i = 1; i < sampleTimetablecopy.length; i++) {
+                //     let newSession2 = null;
+                //     newSession = sampleTimetablecopy[0];
+                //     newSession2 = sampleTimetablecopy[i];
+                //
+                //     if (sampleTimetablecopy.length == 0) {
+                //         return
+                //     }
+                //
+                // }
+            }
+
 
 
 
